Bug 1546582 - Fix about:preferences Clear All History sanitize Everything warning background for dark mode r=dao
Differential Revision: https://phabricator.services.mozilla.com/D28804

UltraBlame original commit: 7e39562216125471121260f5f9775be2a6432d65

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -2025,6 +2025,46 @@ between
 ;
 }
 #
+sanitizeEverythingWarningBox
+{
+background
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+background
+)
+;
+border
+:
+1px
+solid
+var
+(
+-
+-
+in
+-
+content
+-
+box
+-
+border
+-
+color
+)
+;
+}
+#
 blockCookies
 #
 keepRow
